[package]
name = "test-ignore-if-demo"
version = "0.1.1-pre"
authors = ["Thibaut Lorrain <fredszaq@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "a demo for the `test-ignore-if` crate"
homepage = "https://github.com/fredszaq/test-ignore-if"
repository = "https://github.com/fredszaq/test-ignore-if"

[dependencies]
test-ignore-if = { path = "../test-ignore-if" }

[build-dependencies]
test-ignore-if-utils = { path = "../test-ignore-if-utils" }
