[package]
name = "test-ignore-if"
version = "0.1.1-pre"
authors = ["Thibaut Lorrain <fredszaq@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A rust proc macro to conditionnaly ignore tests"
homepage = "https://github.com/fredszaq/test-ignore-if"
repository = "https://github.com/fredszaq/test-ignore-if"

[lib]
proc-macro = true

[dependencies]
darling = "0.9"
lazy_static = "1.3"
proc-macro2 = "0.4"
regex = "1.1"
quote= "0.6"
syn ="0.15"
